refactor: 댓글 및 대댓글 로직 개선
- 댓글/대댓글 추가/삭제 시 댓글 수 및 BestScore 반영 순서 정비
- 조회 로직 내 사용자 정보 매핑, 응답 DTO 생성 등 책임 분리
- 중복 제거 및 성능 고려  유저 정보 조회 방식 적용